--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -1,10 +1,14 @@
+@import 'form';
+@import 'controls';
+
 body{
-	background-image: url("images/mickey.gif");
+	background-image: url("../images/mickey.gif");
 	background-size: 100%;
 	background-color: #cccccc;
 	color: #CD333F;
 	font-family: 'Oswald', sans-serif;
 }
+
 #header{
 	height: 50%;
 	width: 100%;
@@ -17,12 +21,3 @@ body{
 	margin: 0 auto;
 }
 
-#form{
-	background-color: black;
-	opacity: .75;
-	width: 100%;
-	height: 120px;
-	padding: 50px;
-	position: fixed;
-	bottom: 0;
-}
