--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,44 @@
-#form {
-  background-color: black;
+#formdiv {
+  background-color: #051120;
   opacity: .75;
   width: 100%;
-  height: 120px;
+  height: 100px;
   padding: 50px;
   position: fixed;
   bottom: 0; }
 
+#header {
+  left: 0;
+  width: 20%;
+  background-color: #051120;
+  opacity: .75;
+  height: 450px;
+  text-align: center;
+  margin: 0; }
+
+.button {
+  border-radius: 10px;
+  color: #949494; }
+
+.button:hover {
+  color: #F9E0A9;
+  background-color: #363F4B; }
+
 body {
   background-image: url("../images/mickey.gif");
-  background-size: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-color: #cccccc;
-  color: #CD333F;
+  color: #F9E0A9;
   font-family: 'Oswald', sans-serif; }
-
-#header {
-  height: 50%;
-  width: 100%;
-  text-align: center; }
 
 #body {
   text-align: center;
   z-index: 1;
   margin: 0 auto; }
+
+#tracks p {
+  color: #F9E0A9;
+  margin: 0; }
 
 /*# sourceMappingURL=main.css.map */
