--- a/stylesheets/_form.scss
+++ b/stylesheets/_form.scss
@@ -1,10 +1,10 @@
 
 
-#form{
-	background-color: black;
+#formdiv{
+	background-color: #051120;
 	opacity: .75;
 	width: 100%;
-	height: 120px;
+	height: 100px;
 	padding: 50px;
 	position: fixed;
 	bottom: 0;
