--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,13 @@
   background-color: #051120;
   opacity: .75;
   width: 100%;
-  height: 100px;
+  height: 90px;
   padding: 50px;
   position: fixed;
-  bottom: 0; }
+  bottom: 0;
+  text-align: center;
+  z-index: 0;
+  margin: 0; }
 
 #submit {
   border-radius: 10px;
@@ -16,14 +19,23 @@
   background-color: white;
   cursor: pointer; }
 
+@media all and (max-width: 400px) {
+  #formdiv {
+    text-align: left;
+    margin: 0;
+    width: 100%; }
+    #formdiv #form {
+      text-align: left; } }
 #header {
   left: 0;
   width: 20%;
   background-color: #051120;
   opacity: .75;
-  height: 450px;
+  height: 470px;
   text-align: center;
-  margin: 0; }
+  margin: 0;
+  z-index: 4;
+  position: relative; }
 
 .button {
   border-radius: 10px;
@@ -34,21 +46,31 @@
   background-color: white;
   cursor: pointer; }
 
-body {
-  background-image: url("../images/mickey.gif");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-color: #cccccc;
-  color: #F9E0A9;
-  font-family: 'Oswald', sans-serif; }
+#tracks {
+  cursor: pointer; }
 
-#body {
-  text-align: center;
-  z-index: 1;
-  margin: 0 auto; }
+@media (min-width: 400px) and (max-width: 650px) {
+  #header {
+    width: 100%; } }
+@media all and (max-width: 400px) {
+  #header {
+    width: 100%; } }
+@media all {
+  body {
+    background-image: url("../images/mickey.gif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #cccccc;
+    color: #F9E0A9;
+    font-family: 'Oswald', sans-serif; }
 
-#tracks p {
-  color: #F9E0A9;
-  margin: 0; }
+  #body {
+    text-align: center;
+    z-index: 1;
+    margin: 0 auto; }
+
+  #tracks p {
+    color: #F9E0A9;
+    margin: 0; } }
 
 /*# sourceMappingURL=main.css.map */
